# CplusplusTrainingTasks

Ex02/include/: ex_01.h
Ex02/lib/: CMakeLists.txt  ex_01.cpp
Ex02/src/: test.cpp
Ex03/: CMakeLists.txt
Ex03/include/: ex_01.h
Ex03/lib/: ex_01.cpp
Ex03/src/: CMakeLists.txt  test.cpp
Ex04/: CMakeCache.txt  CMakeLists.txt  Ex04.cbp  Makefile  P5.txt  P6.txt  Polynomial.cpp  Polynomial.cpp.autosave  Polynomial.h  cmake_install.cmake  test  test.cpp
Ex05/: CMakeCache.txt  CMakeLists.txt  CPolynomial.cpp  CPolynomial.h  Makefile  P1.txt  P2.txt  P3.txt  P4.txt  Polynomial.cpp  Polynomial.h  cmake_install.cmake  main.cpp  test  test.cpp
Ex06/: highlight
Ex07_qt/build-myfirstqtdemo-Desktop_Qt_5_5_0_GCC_64bit-Debug/: Makefile  moc_mainwindow.cpp  moc_minidraw.cpp  moc_newspaper.cpp  moc_reader.cpp  moc_viewwidget.cpp  myfirstqtdemo  qrc_res.cpp
Ex07_qt/myfirstqtdemo/: mainwindow.cpp  mainwindow.h  myfirstqtdemo.pro  newspaper.h  reader.h  res.qrc  viewwidget.cpp  viewwidget.h
